--- a/index.html
+++ b/index.html
@@ -1,94 +1,93 @@
 <!DOCTYPE html>
-<html lang="pt-Br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Checklist Interativo - Obra Hospitalar (Combate a Incêndio)</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Checklist de Obra - Incêndio</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background-color: #f9f9f9; }
-    h2 { background-color: #d32f2f; color: white; padding: 10px; }
-    h3 { color: #d32f2f; margin-top: 20px; }
-    .checklist-item { display: flex; align-items: center; margin: 5px 0; }
-    .checklist-item input[type="checkbox"] { margin-right: 10px; transform: scale(1.3); }
-    .section { margin-bottom: 30px; }
-    button {
-      background-color: #388e3c;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
     }
-    button:hover { background-color: #2e7d32; }
-    #export-area { margin-top: 30px; }
-    textarea {
+    h1 {
+      color: #b30000;
+    }
+    input[type="text"] {
       width: 100%;
-      height: 200px;
-      margin-top: 10px;
-      font-size: 14px;
+      padding: 8px;
+      margin-bottom: 15px;
+      font-size: 16px;
+    }
+    label {
+      display: block;
+      margin: 10px 0 5px;
+    }
+    .checklist-section {
+      margin-bottom: 20px;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 10px;
+    }
+    .check-item {
+      margin-bottom: 5px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #d10000;
+      color: white;
+      border: none;
+      cursor: pointer;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <h2>Checklist Interativo - Sistema de Combate a Incêndio em Hospital</h2>
+  <h1>Checklist de Recebimento de Obra - Sistema de Combate a Incêndio</h1>
 
-  <div class="section">
-    <h3>1. SISTEMAS DE PROTEÇÃO PASSIVA</h3>
-    <div class="checklist-item"><input type="checkbox"> Resistência ao fogo da estrutura conforme projeto</div>
-    <div class="checklist-item"><input type="checkbox"> Compartimentação horizontal e vertical adequada</div>
-    <div class="checklist-item"><input type="checkbox"> Selagem corta-fogo em shafts e dutos</div>
-    <div class="checklist-item"><input type="checkbox"> Portas corta-fogo com certificação adequada</div>
+  <label>Nome do Cliente / Órgão:</label>
+  <input type="text" id="cliente" placeholder="Digite o nome do cliente ou órgão" />
+
+  <div id="checklist-container">
+    <div class="checklist-section">
+      <strong>1. Rede de Hidrantes</strong>
+      <div class="check-item"><input type="checkbox" /> Tubulação pressurizada?</div>
+      <div class="check-item"><input type="checkbox" /> Registro globo instalado?</div>
+      <div class="check-item"><input type="checkbox" /> Mangueiras testadas e válidas?</div>
+    </div>
+
+    <div class="checklist-section">
+      <strong>2. Extintores</strong>
+      <div class="check-item"><input type="checkbox" /> Todos instalados nos locais certos?</div>
+      <div class="check-item"><input type="checkbox" /> Sinalização visível?</div>
+      <div class="check-item"><input type="checkbox" /> Carga e validade conferidas?</div>
+    </div>
+
+    <div class="checklist-section">
+      <strong>3. Iluminação de Emergência</strong>
+      <div class="check-item"><input type="checkbox" /> Unidades funcionando?</div>
+      <div class="check-item"><input type="checkbox" /> Autonomia dos equipamentos testada?</div>
+    </div>
+
+    <div class="checklist-section">
+      <strong>4. Sinalização de Segurança</strong>
+      <div class="check-item"><input type="checkbox" /> Saídas sinalizadas?</div>
+      <div class="check-item"><input type="checkbox" /> Pictogramas corretos e visíveis?</div>
+    </div>
   </div>
 
-  <div class="section">
-    <h3>2. SISTEMAS DE PROTEÇÃO ATIVA</h3>
-    <div class="checklist-item"><input type="checkbox"> Detectores de fumaça e temperatura funcionando</div>
-    <div class="checklist-item"><input type="checkbox"> Sirenes e botoeiras posicionadas</div>
-    <div class="checklist-item"><input type="checkbox"> Sistema de sprinklers testado</div>
-    <div class="checklist-item"><input type="checkbox"> Sistema de hidrantes completo e acessível</div>
-  </div>
+  <button onclick="exportarPDF()">Exportar Relatório</button>
 
-  <div class="section">
-    <h3>3. SISTEMAS DE CONTROLE DE FUMAÇA</h3>
-    <div class="checklist-item"><input type="checkbox"> Ventiladores de pressurização funcionando</div>
-    <div class="checklist-item"><input type="checkbox"> Exaustores em locais amplos</div>
-  </div>
-
-  <div class="section">
-    <h3>4. SISTEMAS COMPLEMENTARES</h3>
-    <div class="checklist-item"><input type="checkbox"> Gerador de emergência com autonomia</div>
-    <div class="checklist-item"><input type="checkbox"> Elevador de bombeiros funcional</div>
-  </div>
-
-  <div class="section">
-    <h3>5. DOCUMENTOS & TREINAMENTOS</h3>
-    <div class="checklist-item"><input type="checkbox"> Projeto aprovado pelo Corpo de Bombeiros</div>
-    <div class="checklist-item"><input type="checkbox"> ARTs, Laudos e Relatórios de Testes</div>
-    <div class="checklist-item"><input type="checkbox"> Equipe treinada e simulados realizados</div>
-  </div>
-
-  <button onclick="exportChecklist()">Exportar Checklist</button>
-  <div id="export-area">
-    <textarea id="checklist-result" placeholder="O resumo aparecerá aqui após exportar..."></textarea>
-  </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
   <script>
-    function exportChecklist() {
-      const items = document.querySelectorAll('.checklist-item');
-      let result = 'RESULTADO DO CHECKLIST:\n\n';
+    function exportarPDF() {
+      const cliente = document.getElementById("cliente").value || "Relatório sem identificação";
+      const data = new Date().toLocaleDateString();
+      const nomeArquivo = `Checklist_Obra_${cliente.replace(/\s+/g, '_')}_${data}.pdf`;
 
-      items.forEach((item, index) => {
-        const checkbox = item.querySelector('input[type="checkbox"]');
-        const label = item.textContent.trim();
-        const status = checkbox.checked ? '[X]' : '[ ]';
-        result += `${status} ${label}\n`;
-      });
-
-      document.getElementById('checklist-result').value = result;
+      const element = document.body.cloneNode(true);
+      element.querySelector("button").remove(); // remove botão do PDF
+      html2pdf().from(element).save(nomeArquivo);
     }
   </script>
 </body>
 </html>
-
-
